# IronComputing

./: README.md  build.gradle  compile_java_proto.sh  gradle.properties  settings.gradle
common/: build.gradle
common/src/main/java/com/decduck3/ironcomputing/: IronComputing.java
common/src/main/java/com/decduck3/ironcomputing/block/: ComputerCaseBlock.java  FirmwareStationBlock.java  IronComputingBlocks.java  UIBlockEntityBlock.java
common/src/main/java/com/decduck3/ironcomputing/blockentity/: Computer.java  ContainerBlockEntity.java  FirmwareStation.java  IronComputingBlockEntities.java
common/src/main/java/com/decduck3/ironcomputing/gui/: ComputerMenu.java  ComputerScreen.java  IronComputingMenuTypes.java
common/src/main/java/com/decduck3/ironcomputing/ironserver/: IronServer.java  IronServerLogger.java  IronServerPacketSync.java  WrongSideException.java
common/src/main/java/com/decduck3/ironcomputing/item/: CPUItem.java  RAMItem.java  (+2 more)
common/src/main/resources/: ironcomputing.mixins.json
common/src/main/resources/assets/ironcomputing/block/: computer_case.json
common/src/main/resources/assets/ironcomputing/blockstates/: computer_case.json  firmware_station.json
common/src/main/resources/assets/ironcomputing/lang/: en_us.json
fabric/src/main/resources/: fabric.mod.json
forge/: build.gradle
forge/src/main/resources/: pack.mcmeta
ironserver/: .gitignore  Cargo.toml
ironserver/proto/: main.proto  upload.proto  vm.proto
ironserver/src/: bindgen.rs  firmware.rs  handler.rs  main.rs  vm.rs
ironserver/wit/: spec.wit
psd/: computer.psd
(+32 files in other folders)
